--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "custom-env": "^2.0.2",
+    "express": "^4.18.2",
     "mongoose": "^7.2.3",
     "nodemon": "^2.0.22"
   }
