--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.2.3",
     "nodemon": "^2.0.22",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "websocket": "^1.0.34"
   }
 }
