--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "start": "SET NODE_ENV=local&& nodemon app.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "custom-env": "^2.0.2",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.2.3",
     "nodemon": "^2.0.22",
-    "express-session": "^1.17.3",
     "websocket": "^1.0.34"
   }
 }
